feat: UI Rework
UI now has reference of parent div and can handle itself

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="raytracer-canvas" width="640" height="480"></canvas>
+    <h2>RayTracer</h2>
+    <div id="raytracer"></div>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
